--- a/recruitment.html
+++ b/recruitment.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   
+
   <!-- Bootstrap core CSS -->
  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -74,7 +75,7 @@
 
     <!-- Page Content -->
 
-<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Find your friends for life</i><p>
+<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Find your sisters for life</i><p>
 
         <div class="row" style="margin-bottom:5%">
           <div class="col-lg-8">
@@ -139,6 +140,7 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
               <b><i>Current Open Bidding</i></b>
             </div>
             <div class = "body-style">
+                <b>Missed Formal Recruitment?</b>
                 Current Open Bidding (COB) is recruitment that happens outside of
                 Fall Formal recruitment. It is a more informal recruitment
                 process, which allows potential new members to get to know current
