--- a/philanthropy.html
+++ b/philanthropy.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   
+  <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
   <!-- Bootstrap core CSS -->
  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -76,7 +77,7 @@
     <img class="banner-image" src="./images/philanthropy/philbanner.png">
   </div>
 
-<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;"> <i>The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served.</i><p>
+<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served.</i><p>
 
         <div class="row" style="margin-bottom:5%">
           <div class="col-lg-8">
