--- a/sisterhood.html
+++ b/sisterhood.html
@@ -42,7 +42,7 @@
             </button>
             <div class="navbar-collapse collapse" id="navbar10">
                 <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -62,7 +62,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
                     <!-- <li class="nav-item">
@@ -89,7 +89,7 @@
   <div class="sisterhood-page">
     <div class="container">
         
-        <p style="text-align: center; color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em"><i>"Love &nbsp; &nbsp;Respect&nbsp;&nbsp; Support"</i></p>
+        <p style="text-align: center; color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em; line-height: 2.5rem;"><i>"Let Us Steadfastly Love One Another"</i></p>
 
 <!--
       <div class="sister-summary">
@@ -101,7 +101,7 @@
     </br>
     <div class="container sister-details">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <div class="sister-title"><h1>Sisterhood</h1></div>
           <div class="sister-body">
             Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
@@ -110,7 +110,7 @@
        </div>
           <!-- sisterhood, delta dates, formals -->
        <!-- The slideshow -->
-       <div class="col-md-6">
+       <div class="col-md-4">
             <div id="demo" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
@@ -121,13 +121,13 @@
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife4.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife5.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife6.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
               <!-- Left and right controls -->
@@ -156,7 +156,7 @@
 
   <div class="container sister-details">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <div class="sister-title"><h1>Formals</h1></div>
         <div class="sister-body">
          Twice a year, our chapter decides to go on a mini get-away with all of our sisters! The first retreat of the year happens right before school starts. This retreat allows for our returning members to bond and reconnect with each as we prepare for formal fall recruitment. 
@@ -165,7 +165,7 @@
      </div>
    </div><!--end col-md-7-->
    <!-- The slideshow -->
-   <div class="col-md-6">
+   <div class="col-md-4">
             <div id="demo" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
@@ -176,13 +176,13 @@
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/sisterhood/bb1.jpeg" alt="Los Angeles" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife7.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/bb2.jpg" alt="Chicago" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife8.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/bb4.jpg" alt="New York" width="1100" height="500">
+                  <img  class="slideshowimg" src="./images/sisterhood/srlife9.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
               <!-- Left and right controls -->
@@ -208,13 +208,13 @@
 
 <div class="container sister-details">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
       <div class="sister-title"><h1>Delta Dates</h1></div>
       <div class="sister-body">
         Delta Dates happen throughout the year. Members will ask each other on Delta Dates as way to better know each other and strengthen our sisterhood. Some dates include lunch at the Farmer's Market on campus, coffee at Starbucks, and brunch at the many brunch places in San Diego. These are just moments for everyone to bond and grow our friendship. You can catch sisters studying in Geisel together, watching movies at a sister's house, or exploring San Diego.
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
             <div id="demo" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
@@ -225,13 +225,13 @@
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife1.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife2.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
+                  <img class="slideshowimg" src="./images/sisterhood/srlife3.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
               <!-- Left and right controls -->
@@ -258,7 +258,7 @@
 </div>
 </div>
 
-
+    </div>
 
  <!--FOOTER START -->   
   <footer class="py-3 foot" style="background-color:#FFBFB7">
@@ -321,7 +321,8 @@
    </div>
   <div class="copy-right"><!--row-->
     &copy; 2018 Delta Delta Delta, Gamma Lambda all rights reserved.​
-  </div>
+       </div></div>
+
   </footer>
   <!-- FOOTER END -->
       
