--- a/leadership.html
+++ b/leadership.html
@@ -103,7 +103,7 @@
       <!-- column 1 -->
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4 w3-hover-shadow">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-1.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Haley Higa </h1>
             <p class = "second-line"> President </p>
@@ -116,7 +116,7 @@
       <!-- column 2 -->
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4 w3-hover-shadow">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-3.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Elise Sadsworth </h1>
             <p class = "second-line"> VP Administration </p>
@@ -129,7 +129,7 @@
       <!-- column 3 -->
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4 w3-hover-shadow">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-2.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Denise Tang </h1>
             <p class = "second-line"> VP Chapter Development </p>
@@ -146,7 +146,7 @@
 
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4 w3-hover-shadow">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-4.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Taylor Goto</h1>
             <p class = "second-line"> VP Public Relations </p>
@@ -160,7 +160,7 @@
 
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-5.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Dayondra </h1>
             <p class = "second-line"> VP Finance </p>
@@ -173,7 +173,7 @@
 
       <div class="w3-container w3-cell w3-mobile" style="width:33.33%">
         <div class="w3-card-4 w3-hover-shadow">
-          <img src="images/leadership/test-1.png" class = "photo-padding" style = "width:100%" alt="president">
+          <img src="images/leadership/test-6.JPG" class = "photo-padding" style = "width:100%" alt="president">
           <div class="w3-container w3-center nametag">
             <h1> Delilah Kline</h1>
             <p class = "second-line"> VP Membership </p>
@@ -243,7 +243,7 @@
           </div>
         </div>
       </div> -->
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter  <br>
       University of California, San Diego
     </div>
    </div>
