faq added to navbar on leaderhsip

--- a/leadership.html
+++ b/leadership.html
@@ -52,10 +52,10 @@
             </button>
             <div class="navbar-collapse collapse" id="navbar10">
                 <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item active dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Our Chapter
                       </a>
@@ -75,11 +75,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
-                    <!-- <li class="nav-item">
+<!--
+                     <li class="nav-item active">
                         <a class="nav-link" href="leadership.html">Leadership</a>
-                    </li> -->
+                    </li> 
+-->
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="FAQ.html">FAQ</a>
                     </li>
                 </ul>
             </div>
