--- a/sisterhood.html
+++ b/sisterhood.html
@@ -319,7 +319,7 @@
           </div>
         </div>
       </div> -->
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter<br>
       University of California, San Diego
     </div>
    </div>
