--- a/aboutus.html
+++ b/aboutus.html
@@ -31,9 +31,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
-  <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -49,11 +47,11 @@
             </button>
             <div class="navbar-collapse collapse" id="navbar10">
                 <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Our Chapter
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -72,11 +70,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="leadership.html">Leadership</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class ="nav-item">
+                      <a class = "nav-link" href="FAQ.html">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -163,25 +161,31 @@
 
     <div class=" mySlides">
       <div class="w3-container w3-center">
-        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center padding-left: 50px">
-          <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+        <img src="images/about-us/symbols/asset-5.png" class = "w3-center" style="width:100%;">
+          <p class="adjusted-size"><b> COAT OF ARMS</b> <br>The coat of arms is a quartered shield, the first and fourth are blue with a silver trident, the second and third are gold with a green pine tree. The crest is a torse with six folds alternating gold and blue, topped with a pansy. Below the shield is a scroll with the Greek translation of our open motto, <b>"Let us steadfastly love one another."</b></p>
       </div>
-      <div class="w3-center">
-        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center padding-left: 60px">
-          <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+      <div class="w3-container w3-center">
+        <img src="images/about-us/symbols/Asset-3@3x.png" class = "w3-center" style="width:100%">
+         <p class="adjusted-size"><b style="text-align:center">GREEK LETTERS</b><br>Using the Greek alphabet, the name Delta Delta Delta is depicted above. The Greek letter for delta is the fourth letter of the Greek alphabet and is commonly seen as an isosceles triangle.</p>
       </div>
-      <div class="w3-center">
-        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%">
-        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+      <div class="w3-container w3-center">
+        <img src="images/about-us/symbols/Asset-6.png" class = "w3-center" style="width:100%; text-align:center">
+         <p class="adjusted-size"><b style="text-align:center">THE PANSY</b><br>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
-      <div class="w3-center">
-        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center">
-        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+      <div class="w3-container w3-center">
+        <img src="images/about-us/symbols/Asset-1@3x.png" class = "w3-center" style="width:100%;">
+          <p class="adjusted-size"><b style="text-align:center">THE PINE</b><br>The tree of Tri Delta is the pine tree. The pine is also a symbol of Tri Delta's collegiate members because it represents growth and lofty aspirations.</p>
       </div>
-      <div class="w3-center">
-        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center">
-        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
+
+      <div class="w3-container w3-center">
+        <img src="images/about-us/symbols/Asset-2@3x.png" class = "w3-center" style="width:100%; text-align:center">
+        <p class="adjusted-size"><b style="text-align:center">THE PEARL</b><br>The jewel of Tri Delta is pearl. Because it is the only jewel that grows, developing from a tiny grain of sand into a thing of great value and beauty, it is a symbol of the Fraternity's new members.</p>
       </div>
+      <div class="w3-container w3-center">
+        <img src="images/about-us/symbols/Asset-4@3x.png" class = "w3-center" style="width:100%; text-align:center">
+         <p class="adjusted-size"><b style="text-align:center">THE DOLPHIN</b><br>Recognized as a good omen by the ancient Greeks, the dolphin is a symbol of clear skies and smooth sailing. It symbolizes rebirth, friendship and leadership. In Tri Delta, the dolphin has a particular significance for Fraternity leaders.</p>
+      </div>
+
     </div>
   </div>
     </div>
@@ -253,24 +257,8 @@ function showDivs(n) {
       </div>
 
       <div class="col-sm-4 chapter">
-        <!-- <div class="login">
-          <div class="footer-text">
-            GINsystem Log In
-          </div>
-          <div class="ginsystem-login">
-            <form action="https://app.ginsystem.us/login" method="post" target="blank">
-              <input type="hidden" name="parent_group" value="ddd">
-              <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-              <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-              <button type="submit" class="btn btn-default gin-login">Log In</button>
-            </form>
-          </div>
-          <div class="forgot">
-            <a href="https://imis.tridelta.org/dddimis/DDDMembers/recover-password" target="_blank">Can't Login?</a>
-          </div>
-        </div>
-      </div> -->
-      Gamma Lambda Chapter 
+
+      Gamma Lambda Chapter <br>
       University of California, San Diego
     </div>
    </div>
@@ -291,8 +279,8 @@ $(document).ready(function(){
     dots: true,
     infinite: false,
     speed: 300,
-    slidesToShow: 4,
-    slidesToScroll: 4,
+    slidesToShow: 3,
+    slidesToScroll: 3,
     responsive: [
       {
         breakpoint: 1024,
