--- a/FAQ.html
+++ b/FAQ.html
@@ -92,7 +92,7 @@
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class ="nav-item active">
-                      <a class = "nav-link" href="events.html">FAQ</a>
+                      <a class = "nav-link" href="FAQ.html">FAQ</a>
                     </li>
                 </ul>
             </div>
