--- a/sisterhood.html
+++ b/sisterhood.html
@@ -169,12 +169,12 @@
    </div><!--end col-md-7-->
    <!-- The slideshow -->
    <div class="col-md-4">
-            <div id="demo" class="carousel slide" data-ride="carousel">
+            <div id="demo2" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
+                <li data-target="#demo2" data-slide-to="0" class="active"></li>
+                <li data-target="#demo2" data-slide-to="1"></li>
+                <li data-target="#demo2" data-slide-to="2"></li>
               </ul>
               <!-- The slideshow -->
               <div class="carousel-inner">
@@ -189,10 +189,10 @@
                 </div>
               </div>
               <!-- Left and right controls -->
-              <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <a class="carousel-control-prev" href="#demo2" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
               </a>
-              <a class="carousel-control-next" href="#demo" data-slide="next">
+              <a class="carousel-control-next" href="#demo2" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
               </a>
             </div>
@@ -218,12 +218,12 @@
       </div>
     </div>
     <div class="col-md-4">
-            <div id="demo" class="carousel slide" data-ride="carousel">
+            <div id="demo3" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
+                <li data-target="#demo3" data-slide-to="0" class="active"></li>
+                <li data-target="#demo3" data-slide-to="1"></li>
+                <li data-target="#demo3" data-slide-to="2"></li>
               </ul>
               <!-- The slideshow -->
               <div class="carousel-inner">
@@ -238,10 +238,10 @@
                 </div>
               </div>
               <!-- Left and right controls -->
-              <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <a class="carousel-control-prev" href="#demo3" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
               </a>
-              <a class="carousel-control-next" href="#demo" data-slide="next">
+              <a class="carousel-control-next" href="#demo3" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
               </a>
             </div>
@@ -334,6 +334,7 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
 <!-- Social Media Icons-->
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
